--- a/TabIssueRedrect/MainPage.xaml
+++ b/TabIssueRedrect/MainPage.xaml
@@ -4,12 +4,22 @@
              xmlns:local="clr-namespace:TabIssueRedrect"
              x:Class="TabIssueRedrect.MainPage"
               xmlns:pagese="clr-namespace:TabIssueRedrect.Components.Pages"
-
+        xmlns:pages1e="clr-namespace:TabIssueRedrect.Components"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-
+    
+    
+    
     <TabBar>
 
+            <ContentPage Title="Home" IsVisible="Hidden">
+                <BlazorWebView x:Name="blazorWebView2" HostPage="wwwroot/index.html">
+                    <BlazorWebView.RootComponents>
+                    <RootComponent Selector="#app" ComponentType="{x:Type pages1e:Routes}" />
+                    </BlazorWebView.RootComponents>
+                </BlazorWebView>
+            </ContentPage>
+       
 
         <ShellContent Title="Health List" Icon="icons_task.png">
             <ContentPage Title="Health">
